use faster gen with JDK methods